--- a/index.html
+++ b/index.html
@@ -1,61 +1,135 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Previsor de Roleta - 100% Web</title>
-    <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.3/dist/tesseract.min.js"></script>
-    <style>
-        body { font-family: Arial; max-width: 600px; margin: auto; padding: 20px; }
-        h1 { color: #333; }
-        input[type="file"] { margin-top: 10px; }
-        #output, #resultados { margin-top: 20px; }
-        img { max-width: 100%; margin-top: 10px; }
-        .loading { color: green; font-weight: bold; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Previsor de Roleta - Análise Avançada</title>
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.3/dist/tesseract.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body { font-family: Arial; max-width: 800px; margin: auto; padding: 20px; }
+    h1 { color: #333; }
+    input[type="file"] { margin-top: 10px; }
+    #output, #resultados { margin-top: 20px; }
+    canvas { margin-top: 20px; }
+    img { max-width: 100%; margin-top: 10px; }
+    .loading { color: green; font-weight: bold; }
+  </style>
 </head>
 <body>
-    <h1>Previsor de Números da Roleta</h1>
-    <p>Envie uma imagem com números (JPEG):</p>
-    <input type="file" accept="image/*" onchange="handleFile(this)">
-    <div id="output"></div>
-    <div id="resultados"></div>
+  <h1>Previsor de Números da Roleta</h1>
+  <p>Envie uma imagem com números (JPEG):</p>
+  <input type="file" accept="image/*" onchange="handleFile(this)">
+  <div id="output"></div>
+  <div id="resultados"></div>
+  <canvas id="graficoFrequencia"></canvas>
+  <canvas id="graficoParImpar"></canvas>
+  <canvas id="graficoZonas"></canvas>
 
-    <script>
-        function handleFile(input) {
-            const file = input.files[0];
-            if (!file) return;
+  <script>
+    function handleFile(input) {
+      const file = input.files[0];
+      if (!file) return;
 
-            const reader = new FileReader();
-            reader.onload = function(e) {
-                const img = document.createElement("img");
-                img.src = e.target.result;
-                document.getElementById("output").innerHTML = '<p class="loading">Lendo imagem e extraindo números...</p>';
-                document.getElementById("output").appendChild(img);
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        const img = document.createElement("img");
+        img.src = e.target.result;
+        document.getElementById("output").innerHTML = '<p class="loading">Lendo imagem e extraindo números...</p>';
+        document.getElementById("output").appendChild(img);
 
-                Tesseract.recognize(
-                    e.target.result,
-                    'eng',
-                    { logger: m => console.log(m) }
-                ).then(({ data: { text } }) => {
-                    const numeros = Array.from(text.matchAll(/\d+/g)).map(n => parseInt(n[0]));
-                    document.getElementById("output").innerHTML = "<p><strong>Números extraídos:</strong><br>" + numeros.join(", ") + "</p>";
-                    mostrarPrevisoes(numeros);
-                });
-            };
-            reader.readAsDataURL(file);
+        Tesseract.recognize(
+          e.target.result,
+          'eng',
+          { logger: m => console.log(m) }
+        ).then(({ data: { text } }) => {
+          const numeros = Array.from(text.matchAll(/\d+/g)).map(n => parseInt(n[0]))
+            .filter(n => n >= 0 && n <= 36);  // somente números válidos de roleta
+
+          document.getElementById("output").innerHTML =
+            "<p><strong>Números extraídos:</strong><br>" + numeros.join(", ") + "</p>";
+
+          mostrarAnalise(numeros);
+        });
+      };
+      reader.readAsDataURL(file);
+    }
+
+    function mostrarAnalise(numeros) {
+      if (numeros.length === 0) {
+        document.getElementById("resultados").innerHTML = "<p>Nenhum número válido foi identificado.</p>";
+        return;
+      }
+
+      const contagem = {};
+      const zonas = [0, 0, 0]; // zona 1, 2, 3
+      let pares = 0, impares = 0;
+
+      numeros.forEach(n => {
+        contagem[n] = (contagem[n] || 0) + 1;
+        if (n >= 1 && n <= 12) zonas[0]++;
+        else if (n >= 13 && n <= 24) zonas[1]++;
+        else if (n >= 25 && n <= 36) zonas[2]++;
+        if (n !== 0) (n % 2 === 0 ? pares++ : impares++);
+      });
+
+      const top10 = Object.entries(contagem).sort((a, b) => b[1] - a[1]).slice(0, 10).map(e => e[0]);
+
+      document.getElementById("resultados").innerHTML = `
+        <h3>Top 10 Números Prováveis:</h3>
+        <p>${top10.join(", ")}</p>
+        <p><strong>Quantidade total de números analisados:</strong> ${numeros.length}</p>
+      `;
+
+      const labels = Array.from({ length: 37 }, (_, i) => i);
+      const dataFreq = labels.map(n => contagem[n] || 0);
+
+      new Chart(document.getElementById("graficoFrequencia"), {
+        type: "bar",
+        data: {
+          labels: labels,
+          datasets: [{
+            label: "Frequência de Números",
+            data: dataFreq,
+            backgroundColor: "rgba(0, 123, 255, 0.6)"
+          }]
+        },
+        options: {
+          responsive: true,
+          scales: {
+            y: { beginAtZero: true }
+          }
         }
+      });
 
-        function mostrarPrevisoes(numeros) {
-            const contagem = {};
-            numeros.forEach(n => contagem[n] = (contagem[n] || 0) + 1);
-            const previsoes = Object.entries(contagem)
-                .sort((a, b) => b[1] - a[1])
-                .slice(0, 10)
-                .map(entry => entry[0]);
-            
-            document.getElementById("resultados").innerHTML =
-                "<h3>Top 10 Números Prováveis:</h3><p>" + previsoes.join(", ") + "</p>";
+      new Chart(document.getElementById("graficoParImpar"), {
+        type: "pie",
+        data: {
+          labels: ["Pares", "Ímpares"],
+          datasets: [{
+            data: [pares, impares],
+            backgroundColor: ["#28a745", "#dc3545"]
+          }]
         }
-    </script>
+      });
+
+      new Chart(document.getElementById("graficoZonas"), {
+        type: "bar",
+        data: {
+          labels: ["Zona 1 (1-12)", "Zona 2 (13-24)", "Zona 3 (25-36)"],
+          datasets: [{
+            label: "Distribuição por Zona",
+            data: zonas,
+            backgroundColor: ["#ffc107", "#17a2b8", "#6f42c1"]
+          }]
+        },
+        options: {
+          responsive: true,
+          scales: {
+            y: { beginAtZero: true }
+          }
+        }
+      });
+    }
+  </script>
 </body>
 </html>
